syntax = "proto3";
package nl.svsticky.chroma;

import "entity/photo.proto";

message Album {
  optional string id = 1;
  optional string name = 2;
  optional Photo coverPhoto = 3;
  optional int64 createdAt = 4;
  optional AlbumUser createdBy = 5;
  optional bool published = 6;
  optional int64 publishedAt = 7;
  optional AlbumUser publishedBy = 8;
}

enum UserType {
  SERVICE = 0;
  KOALA = 1;
}

message AlbumUser {
  UserType type = 1;
  optional string name = 2;
  int32 id = 3;
}