syntax = "proto3";
package nl.svsticky.chroma;

import "entity/photo.proto";
import "entity/album.proto";

message GetAlbumResponse {
  Album album = 1;
  repeated Photo photos = 2;
}